# RpPicoCtrl-X

./: .gitignore  CMakeLists.txt  PicoSDKConfig.cmake  README.md  RpPicoCtrl-X01.sln  RpPicoCtrl-X01.vgdbproj
src/: main.c  main.h  xplc.c  xplc.h
src/adc/: xadc.c  xadc.h
src/gpio/: xgpio.c  xgpio.h  xgpio_Defs.h  xpwm.c  xpwm.h
src/i2c/: xi2c.c  xi2c.h
src/i2c/RV3028/: RV3028.c  RV3028_Defs.h
src/i2c/eeprom/: xeeprom.c  xeeprom.h
src/i2c/ioexp/: ioexp.c  ioexp.h  ioexp_Defs.h
src/i2c/joy2/: joy2.c  joy2.h
src/i2c/oled_sh1106/: BitBang_I2C.c  BitBang_I2C.h  ss_oled.c  ss_oled.h
src/plc/: PLCTest03_pico.c  POUS.h  POUS2.h  Resource1.c  iec_std_lib.h  plc_ioconfig.c
src/spi/: xspi.c  xspi.h  xspics.h
src/spi/max31865/: MAX31865.c  MAX31865.h  MAX31865Conf.h
src/spi/mcp2515/: mcp2515.c  mcp2515.h
src/spi/sram/: 23LCV512.c  23LCV512.h
src/uart/: tt_uart.c  tt_uart.h
